# FLIni

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
model/: IniDocumentIO.h  IniDocumentModel.cpp  IniDocumentModel.h
presenter/: IniDocumentPresenter.cpp  IniDocumentPresenter.h
view/: CommandWidget.cpp  CommandWidget.h  DocumentPreviewWidget.cpp  DocumentPreviewWidget.h  FieldDescriptionWidget.cpp  FieldDescriptionWidget.h  FieldListWidget.cpp  FieldListWidget.h  MainWidget.cpp  MainWidget.h  ServiceDescriptionWidget.cpp  ServiceDescriptionWidget.h
